# test-ci

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: github-actions-demo.yml
my_lib/: my_lib.cpp  my_lib.hpp
tests/: all.cpp
